# rust-tutorial

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs  user.rs
src/controllers/: user_controller.rs
src/docs/: TASK.md
src/dtos/: user_dto.rs
src/helpers/: response.rs
src/models/: user.rs
src/services/: user_service.rs
